# micro-service-with-kubernetes

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py
app/: __init__.py  api_models.py  config.py  controllers.py  database.py  extensions.py  model_mixins.py  models.py  schemas.py  utils.py
migrations/: env.py
migrations/versions/: 03ff02ec399b_.py  076acd43ad07_.py  10c49c83120d_.py  1267de48ac61_.py  14414a92be36_.py  1634c0e7698e_.py  178034268c4e_.py  1cccd062e551_.py  22cdf1b57c28_.py  267828fa721a_.py  2ec8014d3ee4_.py  3754796019c3_.py  3d95ed011bdc_.py  43190ce5d80f_.py  59e19be8f602_.py  66df5ffcf172_.py  7569dfb6a5e5_.py  8415e751adbf_.py  865d73a9c637_.py  86a2ce61b66c_.py  8ccfe39d460d_.py  8e058e804cb6_.py  b54dac5b05e4_.py  cc833f3d6ec5_.py  d3c17dbae7e2_.py  d66b04ce087d_.py  dc9fde18e0ae_.py  dcc9984a2a6d_.py  ec8b5bf84b42_.py  eea66eddc172_.py  f0ff647d6a98_.py  f1505d547d46_.py  f4f097120ddd_.py  f96b7ca77308_.py  ff0a304494e4_.py
