[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Shukran Jabbarov <shukranjsp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-restx = "^1.3.0"
sqlalchemy = "^2.0.32"
flask-migrate = "^4.0.7"
flask-caching = "^2.3.0"
flask-jwt-extended = "^4.6.0"
flask-postgresql = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"